# adhdaf

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  phase0-skeleton.patch  pyproject.toml  tech-stack-map.html  whata-was-the-plan-wondrous-widget.md
.claude/: settings.json  settings.local.json
.claude/skills/capture-braindump/: SKILL.md
.claude/skills/run-dev/: SKILL.md
docs/: apple_shortcut.md  implementation_slices.md  later_backlog.md  manual_test.md  v0_spec.md
docs/superpowers/plans/: 2026-06-21-slice-1-capture.md
docs/superpowers/specs/: 2026-06-21-slice-1-capture-design.md
src/adhdaf/: __init__.py  app.py  auth.py  cli.py  config.py  database.py  models.py  schemas.py
src/adhdaf/migrations/: 001_initial.sql
src/adhdaf/routes/: __init__.py  capture.py  health.py
src/adhdaf/services/: __init__.py  capture_service.py
tests/: __init__.py  conftest.py  test_auth.py  test_capture_service.py  test_database.py  test_health.py  test_models.py  test_routes_capture.py
